--- a/Documents/주현종 프로토타입(머지x)/join.html
+++ b/Documents/주현종 프로토타입(머지x)/join.html
@@ -80,41 +80,44 @@
             <hr id="main_line2">
         </div> <!--inner_member-->
 
-        <div class="inner_member clearfix">
+        <div class="inner_member2 clearfix">
             <h4>기본정보</h4>
 
             <form name="frm" id="joinBox">
-				<div class="rows h">
+				<div class="text">
 					<label for="id">아이디</label>
 				</div>
-				<div class="rows id">
+				<div class="textBox">
 					<input type="text" class="id" name="id" id="id" placeholder="아이디를 입력하세요.">
 					<input type="button" class="id" value="중복확인">
 				</div>
 
-				<div class="rows h">
+				<div class="text">
 					<label for="password">비밀번호</label>
 				</div>
 				
-				<div class="rows">
+				<div class="textBox">
 					<input type="password" name="password" id="password" placeholder="비밀번호를 입력하세요.">
 				</div>
 
-				<div class="rows h">
+				<div class="text">
 					<label for="passwordre">비밀번호 확인</label>
 				</div>
+                <div class="textBox">
+					<input type="password" name="passwordre" id="passwordre" placeholder="비밀번호를 다시 입력하세요.">
+				</div>
 
-				<div class="rows h">
+				<div class="text">
 					<label for="name">이름</label>
 				</div>
-				<div class="rows">
+				<div class="textBox">
 					<input type="text" name="name" id="name" placeholder="이름을 입력하세요.">
 				</div>
 
-				<div class="rows h">
+				<div class="text">
 					<label for="email">이메일</label>
 				</div>
-				<div class="rows">
+				<div class="textBox">
 					<input type="email" name="email" id="email" placeholder="이메일을 입력하세요">
                     <select class="birth2" name="birth2">
 						<option value="0">직접입력</option>
@@ -126,10 +129,10 @@
 					</select>
 				</div>
 
-				<div class="rows h">
+				<div class="text">
 					<label for="phone1">연락처</label>
 				</div>
-				<div class="rows">
+				<div class="textBox">
 					<select name="phone1" id="phone1">
 						<option value="010">010</option>
 						<option value="010">011</option>
@@ -139,22 +142,22 @@
 					<input type="text" name="phone3" id="phone3" placeholder="연락처3">
 				</div>
 
-                <div class="rows h">
+                <div class="text">
 					<label for="addr">주소</label>
 				</div>
-                <div class="rows">
+                <div class="textBox">
 					<input type="text" name="addr2" id="addr2" placeholder="우편번호를 입력하세요.">
                     <input type="text" name="addr3" id="addr3" placeholder="주소를 입력하세요.">
 				</div>
 
-                <div class="rows h">
+                <div class="text">
 					<label for="check">개인정보 수집 및 이용</label>
 				</div>
-                <div class="rows">
+                <div class="textBox">
 					<input type="checkbox" name="agree" id="agree">동의
 				</div>
 
-				<div class="rows">
+				<div class="textBox">
 					<label>
 						<input type="submit" value="회원가입">
 					</label>
