프로토타입 추가제작

--- a/Documents/주현종 프로토타입(머지x)/login.html
+++ b/Documents/주현종 프로토타입(머지x)/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title>
-    <link rel="stylesheet" href="./main.css">
+    <title>login</title>
+    <link rel="stylesheet" href="./login.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,7 @@
                 </ul>
             </nav>
         </div> <!--inner-->
+
 
         <div class="inner">
             <ul id="category">
@@ -73,7 +74,45 @@
 
     <main>
         <hr id="main_line">
+        <div class="inner_member clearfix">
+            <h3>로그인</h3>
+            <hr id="main_line2">
+        </div> <!--inner_member-->
+
+        <div class="inner_member2 clearfix">
+            <form name="frm" id="loginBox">
+                <h4>회원로그인</h4>
+                <input type="text" name="id" class="margin1"><br>
+                <input type="password" name="password" class="margin1">
+                <input type="submit" value="로그인">
+                <div id="joinLink" class="margin1">
+                    <a href="./join.html">회원가입하기</a>
+                </div>
+            </form>
+
+            <form name="frm2" id="notLoginBox">
+                <h4>비회원 주문조회 하기</h4>
+                <input type="text" name="orderName" class="margin1"><br>
+                <input type="password" name="orderNum" class="margin1">
+                <input type="submit" value="확인">
+            </form>
+        </div><!--inner_member2-->
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <footer>
