--- a/Documents/주현종 프로토타입(머지x)/join.html
+++ b/Documents/주현종 프로토타입(머지x)/join.html
@@ -23,7 +23,6 @@
             </nav>
         </div> <!--inner-->
 
-        <hr>
 
         <div class="inner">
             <ul id="category">
@@ -85,41 +84,40 @@
 
             <form name="frm" id="joinBox">
 				<div class="text">
-					<label for="id">아이디</label>
+					<label for="id">아이디 :</label>
 				</div>
 				<div class="textBox">
-					<input type="text" class="id" name="id" id="id" placeholder="아이디를 입력하세요.">
-					<input type="button" class="id" value="중복확인">
+					<input type="text" name="id" >
+					<input type="button" id="idCheck" value="중복확인">
 				</div>
-
+                <br>
 				<div class="text">
-					<label for="password">비밀번호</label>
+					<label for="password">비밀번호 :</label>
 				</div>
-				
 				<div class="textBox">
-					<input type="password" name="password" id="password" placeholder="비밀번호를 입력하세요.">
+					<input type="password" name="password">
 				</div>
-
+                <br>
 				<div class="text">
-					<label for="passwordre">비밀번호 확인</label>
+					<label for="passwordre">비밀번호 확인 :</label>
 				</div>
                 <div class="textBox">
-					<input type="password" name="passwordre" id="passwordre" placeholder="비밀번호를 다시 입력하세요.">
+					<input type="password" name="passwordre">
 				</div>
-
+                <br>
 				<div class="text">
-					<label for="name">이름</label>
+					<label for="name">이름 :</label>
 				</div>
 				<div class="textBox">
-					<input type="text" name="name" id="name" placeholder="이름을 입력하세요.">
+					<input type="text" name="name">
 				</div>
-
+                <br>
 				<div class="text">
-					<label for="email">이메일</label>
+					<label for="email" id="email">이메일 :</label>
 				</div>
-				<div class="textBox">
-					<input type="email" name="email" id="email" placeholder="이메일을 입력하세요">
-                    <select class="birth2" name="birth2">
+				<div class="textBox" id="ff">
+					<input type="email" name="email" >
+                    <select name="email2" id="email2">
 						<option value="0">직접입력</option>
 						<option value="1">@naver.com</option>
 						<option value="2">@daum.net</option>
@@ -127,37 +125,52 @@
 						<option value="4">@nate.com</option>
 						<option value="5">@icloud.com</option>
 					</select>
+                    <br>
+                    <div class="agreeBox">
+                        <input type="checkbox" name="agree">
+                    </div>
+                    <div class="agreeText">
+                        <label for="check">메일수신에 동의</label>
+                    </div>
 				</div>
-
+                <br>
 				<div class="text">
-					<label for="phone1">연락처</label>
+					<label for="phone" id="phone" >연락처 :</label>
 				</div>
-				<div class="textBox">
+				<div class="textBox" id="ff2">
 					<select name="phone1" id="phone1">
 						<option value="010">010</option>
 						<option value="010">011</option>
 						<option value="010">016</option>
 					</select>&nbsp;
-					<input type="text" name="phone2" id="phone2" placeholder="연락처2">&nbsp;
-					<input type="text" name="phone3" id="phone3" placeholder="연락처3">
+					<input type="text" name="phone2" >&nbsp;
+					<input type="text" name="phone3" >
+                    <br>
+                    <div class="agreeBox">
+                        <input type="checkbox" name="agree" >
+                    </div>
+                    <div class="agreeText">
+                        <label for="check" >메일수신에 동의</label>
+                    </div>
 				</div>
-
+                <br>
                 <div class="text">
-					<label for="addr">주소</label>
+					<label for="addr" id="addr">주소 :</label>
 				</div>
                 <div class="textBox">
-					<input type="text" name="addr2" id="addr2" placeholder="우편번호를 입력하세요.">
-                    <input type="text" name="addr3" id="addr3" placeholder="주소를 입력하세요.">
+					<input type="text" name="addr2" placeholder="우편번호" ><br>
+                    <input type="text" name="addr3" id="addr3"><br>
+                    <input type="text" name="addr4" id="addr4">
 				</div>
-
-                <div class="text">
+                <br>
+                <div class="text" id="check">
 					<label for="check">개인정보 수집 및 이용</label>
 				</div>
                 <div class="textBox">
-					<input type="checkbox" name="agree" id="agree">동의
+					<input type="checkbox" name="agree">동의
 				</div>
-
-				<div class="textBox">
+                <br>
+				<div class="textBox_submit">
 					<label>
 						<input type="submit" value="회원가입">
 					</label>
