프로토타입 회원관리
파일들의 main.css 링크를 login폴더 안으로 해놔서 main도 일단 login폴더 안에 집어넣어놨습니다. 링크수정후 수정하겠습니다.

--- a/Documents/4. 프로토타입/login/join.html
+++ b/Documents/4. 프로토타입/login/join.html
@@ -115,7 +115,7 @@
 				<div class="text">
 					<label for="email" id="email">이메일 :</label>
 				</div>
-				<div class="textBox" id="ff">
+				<div class="textBox" id="emailerror">
 					<input type="email" name="email" >
                     <select name="email2" id="email2">
 						<option value="0">직접입력</option>
@@ -137,7 +137,7 @@
 				<div class="text">
 					<label for="phone" id="phone" >연락처 :</label>
 				</div>
-				<div class="textBox" id="ff2">
+				<div class="textBox" id="phoneerror">
 					<select name="phone1" id="phone1">
 						<option value="010">010</option>
 						<option value="010">011</option>
@@ -159,8 +159,7 @@
 				</div>
                 <div class="textBox">
 					<input type="text" name="addr2" placeholder="우편번호" ><br>
-                    <input type="text" name="addr3" id="addr3"><br>
-                    <input type="text" name="addr4" id="addr4">
+                    <textarea name="addr3" id="addr3"></textarea>
 				</div>
                 <br>
                 <div class="text" id="check">
