--- a/Documents/4. 프로토타입/login/myPage_delete.html
+++ b/Documents/4. 프로토타입/login/myPage_delete.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./myPage_delete.css">
 </head>
 <body>
     <header>
@@ -80,40 +81,22 @@
         </div> <!--inner_member-->
 
         <div class="inner_member2 clearfix">
-            <form name="frm" id="loginBox">
-                <h4>회원로그인</h4>
+            <form name="frm" id="deleteBox">
+                <h4>회원 탈퇴하기</h4>
                 <div class="textBox">
                     <input type="text" name="id" class="margin1"><br>
                     <input type="password" name="password" class="margin1">
                 </div>
                 <div class="submit">
-                    <input type="submit" value="로그인">
+                    <input type="submit" value="회원 탈퇴">
                 </div>
-                <div id="joinLink" class="margin1">
-                    <a href="./join.html">회원가입하기</a>
+                <div id="modifyLink" class="margin1">
+                    <a href="./myPage_modify.html">이전 페이지</a>
                 </div>
             </form>
 
-            <form name="frm2" id="notLoginBox">
-                <h4>비회원 주문조회 하기</h4>
-                <div class="textBox">
-                    <input type="text" name="orderName" class="margin1"><br>
-                    <input type="password" name="orderNum" class="margin1">
-                </div>
-                <div class="submit">
-                    <input type="submit" value="확인">
-                </div>
-            </form>
         </div><!--inner_member2-->
     </main>
-
-
-
-
-
-
-
-
 
 
 
