--- a/Documents/4. 프로토타입/login/myPage_modify.html
+++ b/Documents/4. 프로토타입/login/myPage_modify.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-    <link rel="stylesheet" href="./login.css">
+    <title>myPage_modify</title>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./myPage_modify.css">
 </head>
 <body>
     <header>
@@ -75,52 +76,99 @@
     <main>
         <hr id="main_line">
         <div class="inner_member clearfix">
-            <h3>로그인</h3>
+            <h3>마이페이지 수정</h3>
             <hr id="main_line2">
         </div> <!--inner_member-->
 
-        <div class="inner_member2 clearfix">
-            <form name="frm" id="loginBox">
-                <h4>회원로그인</h4>
+        <div class="inner_member2 clearfix" id="joinBox12345">
+            <form name="frm" id="joinBox">
+				<div class="text">
+					<label for="name">이름 :</label>
+				</div>
+				<div class="textBox">
+					<input type="text" name="name">
+				</div>
+                <br>
+				<div class="text">
+					<label for="email" id="email">이메일 :</label>
+				</div>
+				<div class="textBox" id="emailerror">
+					<input type="email" name="email" >
+                    <select name="email2" id="email2">
+						<option value="0">직접입력</option>
+						<option value="1">@naver.com</option>
+						<option value="2">@daum.net</option>
+						<option value="3">@gmail.com</option>
+						<option value="4">@nate.com</option>
+						<option value="5">@icloud.com</option>
+					</select>
+                    <br>
+                    <div class="agreeBox">
+                        <input type="checkbox" name="agree">
+                    </div>
+                    <div class="agreeText">
+                        <label for="check">메일수신에 동의</label>
+                    </div>
+				</div>
+                <br>
+				<div class="text">
+					<label for="phone" id="phone" >연락처 :</label>
+				</div>
+				<div class="textBox" id="phoneerror">
+					<select name="phone1" id="phone1">
+						<option value="010">010</option>
+						<option value="010">011</option>
+						<option value="010">016</option>
+					</select>&nbsp;
+					<input type="text" name="phone2" >&nbsp;
+					<input type="text" name="phone3" >
+                    <br>
+                    <div class="agreeBox">
+                        <input type="checkbox" name="agree" >
+                    </div>
+                    <div class="agreeText">
+                        <label for="check" >메일수신에 동의</label>
+                    </div>
+				</div>
+                <br>
+                <div class="text">
+					<label for="password">현재 비밀번호 :</label>
+				</div>
+				<div class="textBox">
+					<input type="password" name="password">
+				</div>
+                <br>
+				<div class="text">
+					<label for="password">비밀번호 변경:</label>
+				</div>
+				<div class="textBox">
+					<input type="password" name="password">
+				</div>
+                <br>
+                <div class="text">
+					<label for="password">비밀번호 변경 확인:</label>
+				</div>
+				<div class="textBox">
+					<input type="password" name="password">
+				</div>
+                <br>
+                <div class="text">
+					<label for="addr" id="addr">주소 :</label>
+				</div>
                 <div class="textBox">
-                    <input type="text" name="id" class="margin1"><br>
-                    <input type="password" name="password" class="margin1">
-                </div>
-                <div class="submit">
-                    <input type="submit" value="로그인">
-                </div>
-                <div id="joinLink" class="margin1">
-                    <a href="./join.html">회원가입하기</a>
-                </div>
-            </form>
-
-            <form name="frm2" id="notLoginBox">
-                <h4>비회원 주문조회 하기</h4>
-                <div class="textBox">
-                    <input type="text" name="orderName" class="margin1"><br>
-                    <input type="password" name="orderNum" class="margin1">
-                </div>
-                <div class="submit">
-                    <input type="submit" value="확인">
-                </div>
-            </form>
+					<input type="text" name="addr2" placeholder="우편번호" ><br>
+                    <textarea name="addr3" id="addr3"></textarea>
+				</div>
+                <br>
+				<div class="textBox_submit">
+						<input type="submit" value="회원정보 수정">
+				</div>
+				<div id="deleteBt">
+					<a href="./myPage_delete.html">회원탈퇴</a>
+				</div>
+			</form> <!--joinBox-->
         </div><!--inner_member2-->
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <footer>
